--- a/WsFed/McaAadWsfed/appsettings.Development.json
+++ b/WsFed/McaAadWsfed/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "WsFed": {
+    "MetadataAddress": "[Federation Metadata URL for the AAD Enterprise App SSO blade, e.g. 'https://login.microsoftonline.com/<Tenant_ID>/federationmetadata/2007-06/federationmetadata.xml?appid=<App_ID>']",
+    "Wtrealm": "[The App Identifier (Entity ID) URI from the AAD Enterprise App SSO blade, e.g. 'https://<App_Identifier>/']"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
