--- a/WsFed/McaAadWsfed/McaAadWsfed.csproj
+++ b/WsFed/McaAadWsfed/McaAadWsfed.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <AssemblyName>McaAadWsfed</AssemblyName>
+    <RootNamespace>Marcusca10.AadAppsDemos.Wsfed</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
