--- a/WebApi/McaAadWebApiAspNetCore/appsettings.Development.json
+++ b/WebApi/McaAadWebApiAspNetCore/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "AzureAd": {
+    "Tenant": "[Enter the name of the tenant where you registered your app, e.g. mytenant.onmicrosoft.com]",
+    "ClientId": "[Enter your clientID from the Azure Management Portal, e.g. b1132c6b-fbf8-43b3-a9d8-329be1c87fcb]"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
